# S-ION

./: .gitignore  Cargo.toml  GEMINI.md  README.md  S-ION_ROUTER_MANIFEST.md  build_guest.sh  index.html  package-lock.json  package.json
.agent/workflows/: s-ion-dev.md
.agents/workflows/: s-ion-dev.md
.gemini/: GEMINI.md
.github/workflows/: build.yml
.sion/: ARCHITECTURE.md  DECISIONS.md  GOTCHAS.md  RUNTIME.md  SECURITY_MODEL.md  STATE_MACHINE.md
copaw-bridge/: package.json  railway.toml
copaw-bridge/src/: index.js
docs/: ROUTER_MANIFEST.md
guest-agent/: Cargo.toml
guest-agent/src/: main.rs
sentinel-bridge/: Dockerfile  README.md  package-lock.json  package.json  railway.toml  tsconfig.json
sentinel-bridge/src/: auth.ts  db.ts  index.ts
sentinel-bridge/src/routes/: bridge.ts  sentinel.ts
src/: App.css  App.tsx  MemoryBrowser.css  MemoryBrowser.tsx  SidecarMonitor.css  SidecarMonitor.tsx  bindings.ts
src-tauri/: .env.example  Cargo.toml  SAM_LOGIC.yaml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/memory/: buffer.rs  embedder.rs  mod.rs  provisioner.rs  router.rs  store.rs
src-tauri/src/orchestrator/: egress.rs  heartbeat.rs  mod.rs  router.rs  sandbox.rs  sentinel.rs  shadow_atlas.rs  shadow_context.rs  shadow_gen.rs  shadow_scanner.rs  shadow_temporal.rs  sidecar_manager.rs  translator.rs  vsock_proto.rs
