[package]
name = "sion-guest-agent"
version = "0.1.0"
description = "S-ION Guest Agent — Minimal VM-side executor for Firecracker MicroVMs"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true           # Link-time optimization
strip = true         # Strip debug symbols
codegen-units = 1    # Single codegen unit for max optimization
panic = "abort"      # Abort on panic (no unwinding overhead)
