[package]
name = "s-ion"
version = "1.0.0"
description = "S-ION — The Universal AI Browser"
authors = ["Sam Samarasinghe"]
edition = "2021"

[lib]
name = "s_ion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
dotenvy = "0.15.7"
tokio = { version = "1.50.0", features = ["full"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
regex = "1"
dirs = "5"
