[package]
name = "s-ion"
version = "1.0.0"
description = "S-ION — The Universal AI Browser"
authors = ["Sam Samarasinghe"]
edition = "2021"

[lib]
name = "s_ion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["specta"] }
tauri-plugin-opener = "2"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "0.0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
dotenvy = "0.15.7"
tokio = { version = "1.50.0", features = ["full"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
regex = "1"
dirs = "5"
dunce = "1"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
